Track data except number dir

--- a/scrapeLvls.ipynb
+++ b/scrapeLvls.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,35 +57,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osmCountriesMeta = load(r\"C:\\Users\\gonta\\D\\code\\development\\OSM\\get countries ids and add labels\\data\\osmCountriesAddMetaInfo.json\")\n",
-    "osmCountriesIdsDict = load(r\"c:\\Users\\gonta\\D\\code\\development\\OSM\\get countries ids and add labels\\data\\osmCountriesIdsDict.json\")"
+    "osmMetaCountrDict = load(r\"C:\\Users\\gonta\\D\\code\\development\\OSM\\get countries ids and add labels\\data\\osmMetaCountrDict.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1428125'"
+       "'51477'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cntrName = \"Canada\"\n",
-    "cntrRaw = f\"./data/{osmCountriesIdsDict[cntrName]}/rawOSMRes.json\"\n",
-    "cntrDataDir = f\"./data/{osmCountriesIdsDict[cntrName]}/\"\n",
-    "cntrId = osmCountriesIdsDict[cntrName]\n",
+    "cntrName = \"Germany\"\n",
+    "cntrRaw = f\"./data/{osmMetaCountrDict[cntrName]['id']}/rawOSMRes.json\"\n",
+    "cntrDataDir = f\"./data/{osmMetaCountrDict[cntrName]['id']}/\"\n",
+    "cntrId = osmMetaCountrDict[cntrName]['id']\n",
     "cntrId"
    ]
   },
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,19 +113,22 @@
        "['version', 'generator', 'osm3s', 'elements']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rawOSMRes = getOSMAddsTRecursedown(cntrId, [4,6,8])\n",
-    "list(rawOSMRes.keys())"
+    "rawOSMRes = getOSMIDAddsStruct(cntrId, [4,6,8])\n",
+    "list(rawOSMRes.keys())\n",
+    "\n",
+    "# rawOSMRes = getOSMAddsTRecursedown(cntrId, [4,6,8])\n",
+    "# list(rawOSMRes.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,25 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['version', 'generator', 'osm3s', 'elements']\n"
+      "['version', 'generator', 'osm3s', 'elements']\n",
+      "11762\n"
      ]
     }
    ],
    "source": [
     "rawOSMRes = load(cntrRaw)\n",
-    "print(list(rawOSMRes.keys()))"
+    "print(list(rawOSMRes.keys()))\n",
+    "print(len(rawOSMRes['elements']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,16 +172,17 @@
      "output_type": "stream",
      "text": [
       "missing name:  0\n",
-      "duplicate elements:  6\n"
+      "duplicate elements:  9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[], [9271165, 9117919, 9107934, 11722184, 9334290, 17542341]]"
+       "[[],\n",
+       " [3659532, 62485, 442452, 1115033, 1115034, 1808583, 439554, 534534, 3678366]]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +193,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "435516,62467,62485\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.openstreetmap.org/relation/435516',\n",
+       " 'https://www.openstreetmap.org/relation/62467',\n",
+       " 'https://www.openstreetmap.org/relation/62485']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id = 62485\n",
+    "temp = [ele['tags']['parent_id'] for ele in rawOSMRes['elements'] if ele['id'] == id]\n",
+    "temp.append(str(id))\n",
+    "print(','.join(temp))\n",
+    "temp = list(map(lambda x: f'https://www.openstreetmap.org/relation/{x}', temp))\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "removeEnts = {'1428125' : [\n",
+    "    {'id': '9271165', 'parent_id': '1354835'},\n",
+    "    {'id': '9117919', 'parent_id': '9344588'},\n",
+    "    {'id': '9107934', 'parent_id': '11681120'},\n",
+    "    {'id': '11722184', 'parent_id': '9123338'},\n",
+    "    {'id': '9334290', 'parent_id': '9082149'},\n",
+    "    {'id': '17542341', 'parent_id': '12375630'}\n",
+    "]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = {\n",
+    "    '51477': [\n",
+    "        {'id': '3659532'},\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump('./data/removeEnts.json', removeEnts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "rawOSMResTSane = copy.deepcopy(rawOSMRes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rawOSMResTSane['elements'] = [ele for ele in rawOSMRes['elements'] if not (ele['tags'].get('parent_id', '') == '1354835' and ele['id'] == 9271165)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1428125'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "osmMetaCountrDict['Canada']['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +326,7 @@
     }
    ],
    "source": [
-    "import copy\n",
-    "rawOSMResTSane = copy.deepcopy(rawOSMRes)\n",
+    "\n",
     "print(len(rawOSMResTSane['elements']))\n",
     "rawOSMResTSane['elements'] = [ele for ele in rawOSMRes['elements'] if not (ele['tags'].get('parent_id', '') == '1354835' and ele['id'] == 9271165)]\n",
     "rawOSMResTSane['elements'] = [ele for ele in rawOSMResTSane['elements'] if not (ele['tags'].get('parent_id', '') == '9344588' and ele['id'] == 9117919)]\n",
