--- a/notebooks/clean_and_test.ipynb
+++ b/notebooks/clean_and_test.ipynb
@@ -63,22 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "17b86970",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "241"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# init\n",
     "from tools.logger_config import get_logger"
    ]
   },
@@ -87,7 +77,7 @@
    "id": "a9280904",
    "metadata": {},
    "source": [
-    "# Cleaning and normalize"
+    "# Cleaning"
    ]
   },
   {
@@ -723,25 +713,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11d109e2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\gonta\\\\D\\\\study\\\\full stack\\\\projects\\\\administrative divisions query - levels scrape\\\\data\\\\test results\\\\osm duplicates test\\\\dup_test.log'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m dup_test_logger = \u001b[43mget_logger\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m../data/test results/osm duplicates test/dup_test.log\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdup_test_logger\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gonta\\D\\study\\full stack\\projects\\administrative divisions query - levels scrape\\notebooks\\..\\tools\\logger_config.py:8\u001b[39m, in \u001b[36mget_logger\u001b[39m\u001b[34m(log_file_path, name)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m logger.hasHandlers():  \u001b[38;5;66;03m# prevent duplicate handlers in notebooks\u001b[39;00m\n\u001b[32m      6\u001b[39m     logger.setLevel(logging.DEBUG)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     file_handler = \u001b[43mlogging\u001b[49m\u001b[43m.\u001b[49m\u001b[43mFileHandler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlog_file_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mw\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     file_handler.setLevel(logging.DEBUG)\n\u001b[32m     11\u001b[39m     console_handler = logging.StreamHandler()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\Python314\\Lib\\logging\\__init__.py:1219\u001b[39m, in \u001b[36mFileHandler.__init__\u001b[39m\u001b[34m(self, filename, mode, encoding, delay, errors)\u001b[39m\n\u001b[32m   1217\u001b[39m     \u001b[38;5;28mself\u001b[39m.stream = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1218\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1219\u001b[39m     StreamHandler.\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Program Files\\Python314\\Lib\\logging\\__init__.py:1248\u001b[39m, in \u001b[36mFileHandler._open\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1243\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   1244\u001b[39m \u001b[33;03mOpen the current base file with the (original) mode and encoding.\u001b[39;00m\n\u001b[32m   1245\u001b[39m \u001b[33;03mReturn the resulting stream.\u001b[39;00m\n\u001b[32m   1246\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   1247\u001b[39m open_func = \u001b[38;5;28mself\u001b[39m._builtin_open\n\u001b[32m-> \u001b[39m\u001b[32m1248\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mopen_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mbaseFilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1249\u001b[39m \u001b[43m                 \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\gonta\\\\D\\\\study\\\\full stack\\\\projects\\\\administrative divisions query - levels scrape\\\\data\\\\test results\\\\osm duplicates test\\\\dup_test.log'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dup_test_logger = get_logger('../data/tests results/osm duplicates test/dup_test.log', 'dup_test_logger')"
    ]
@@ -756,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8ed93df2",
    "metadata": {},
    "outputs": [
@@ -766,7 +741,7 @@
        "2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5d44c536",
    "metadata": {},
    "outputs": [
@@ -793,11 +768,12 @@
    ],
    "source": [
     "def test(cntr, df):\n",
-    "    logger.info(f\"Processing {cntr}\")\n",
+    "    dup_test_logger.info(f\"Processing {cntr}\")\n",
     "    test_res = testbasic.osm_duplicates_test_center(df, odt_processed_info)\n",
     "    data_path = os.path.join(os.getcwd(), f\"../data/tests results/osm duplicates test/{cntr}/{cntr}_test_res.pkl\")\n",
     "    if not os.path.exists(data_path):\n",
     "        tgm.dump(data_path, test_res)\n",
+    "    return test_res\n",
     "\n",
     "to_test = list(df_by_cntr.items())[:2]\n",
     "odt_test_res = {cntr: test(cntr, df) for cntr, df in to_test}"
@@ -805,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "4e5bfe35",
    "metadata": {},
    "outputs": [
@@ -820,7 +796,7 @@
        "  'duplicate.delete_elems': []}}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
