Update duplicates test processed file

--- a/notebooks/clean_and_test.ipynb
+++ b/notebooks/clean_and_test.ipynb
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "10cf0a4e",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "f1d57067",
    "metadata": {},
    "outputs": [],
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "id": "64a4c725",
    "metadata": {},
    "outputs": [
@@ -994,6 +994,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ce3c789b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_res': {('6543282', '6543265'): {'status': 'ok',\n",
+       "   'result': True,\n",
+       "   'data': {'version': 0.6,\n",
+       "    'generator': 'Overpass API 0.7.62.8 e802775f',\n",
+       "    'osm3s': {'timestamp_osm_base': '2025-10-24T21:14:52Z',\n",
+       "     'timestamp_areas_base': '2025-10-24T13:15:50Z',\n",
+       "     'copyright': 'The data included in this document is from www.openstreetmap.org. The data is made available under ODbL.'},\n",
+       "    'elements': [{'type': 'relation', 'id': 6543265}]}},\n",
+       "  ('6543282', '6543273'): {'status': 'ok',\n",
+       "   'result': False,\n",
+       "   'data': {'version': 0.6,\n",
+       "    'generator': 'Overpass API 0.7.62.8 e802775f',\n",
+       "    'osm3s': {'timestamp_osm_base': '2025-10-24T21:14:52Z',\n",
+       "     'timestamp_areas_base': '2025-10-24T13:15:50Z',\n",
+       "     'copyright': 'The data included in this document is from www.openstreetmap.org. The data is made available under ODbL.'},\n",
+       "    'elements': []}}},\n",
+       " 'duplicate.keep_elems': [('6543282', '6543265')],\n",
+       " 'duplicate.delete_elems': [('6543282', '6543273')]}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odt_test_res_old['Algeria']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "cb613fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(version, generator, osm3s, elements)    1343\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_list = []\n",
+    "for ck,cv in odt_test_res_old.items():\n",
+    "    for ek,ev in cv['test_res'].items():\n",
+    "        temp_list.append(ev['data'].keys())\n",
+    "temp = pd.Series(temp_list)\n",
+    "temp.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "86ced354",
    "metadata": {},
@@ -1003,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "id": "6f95264d",
    "metadata": {},
    "outputs": [
@@ -1030,158 +1095,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "id": "98940ba3",
    "metadata": {},
    "outputs": [],
    "source": [
     "tgm.dump(os.path.join(os.getcwd(), \"../data/tests results/osm duplicates test\", \"odt_processed_info.pkl\"), odt_processed_info_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "b083714d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tests_res_not_empty = {\n",
-    "    k:v \n",
-    "    for k,v in odt_test_res_old.items() \n",
-    "    if v['test_res']\n",
-    "    or v['duplicate.keep_elems']\n",
-    "    or v['duplicate.delete_elems']\n",
-    "}\n",
-    "len(tests_res_not_empty)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "4d8180ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = []\n",
-    "for k,v in tests_res_not_empty.items():\n",
-    "    # temp.append(v['test_res'])\n",
-    "    for ek,ev in v['test_res'].items():\n",
-    "        temp.append(ev['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "370e4ffd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "64\n"
-     ]
-    }
-   ],
-   "source": [
-    "data_dir = Path(os.path.join(os.getcwd(), '..', 'data/tests results/osm duplicates test'))\n",
-    "odt_test_res_files = [f for f in data_dir.rglob('*/*.pkl')]\n",
-    "print(len(odt_test_res_files))\n",
-    "\n",
-    "odt_test_res_old = {\n",
-    "    file.parent.name:tgm.load(str(file))\n",
-    "    for file in odt_test_res_files\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "5d549cc8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(version, generator, osm3s, elements)    1343\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_list = []\n",
-    "for ck,cv in odt_test_res_old.items():\n",
-    "    for ek,ev in cv['test_res'].items():\n",
-    "        temp_list.append(ev['data'].keys())\n",
-    "temp = pd.Series(temp_list)\n",
-    "temp.value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "4d14f233",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "odt_test_res_new = copy.deepcopy(odt_test_res_old)\n",
-    "for ck,cv in odt_test_res_old.items():\n",
-    "    for ek,ev in odt_test_res_new[ck]['test_res'].items():\n",
-    "        ev['data'] = ev['data']['data']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "cd59aea8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(version, generator, osm3s, elements)    1343\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_list = []\n",
-    "for ck,cv in odt_test_res_new.items():\n",
-    "    for ek,ev in cv['test_res'].items():\n",
-    "        temp_list.append(ev['data'].keys())\n",
-    "temp = pd.Series(temp_list)\n",
-    "temp.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "66ca7d07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k,v in list(odt_test_res_new.items()):\n",
-    "    tgm.dump(os.path.join(os.getcwd(),  f\"../data/tests results/osm duplicates test/{k}/{k}_test_res.pkl\"),v)"
    ]
   }
  ],
