Update notebook using fixed data

--- a/notebooks/clean_and_test.ipynb
+++ b/notebooks/clean_and_test.ipynb
@@ -444,165 +444,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "fb628188",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "greece = df_by_cntr['Greece'][df_by_cntr['Greece']['id'] == '192307']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "3e4372e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * missing names:  0\n",
-      " * relations from other countries:  0\n"
-     ]
-    }
-   ],
-   "source": [
-    "greece_res = osmt.osm_basic_test(greece)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8257ddf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reloadPckg()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "71110e2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>id</th>\n",
-       "      <th>tags.admin_level</th>\n",
-       "      <th>tags.parent_id</th>\n",
-       "      <th>tags.name</th>\n",
-       "      <th>tags.name:us</th>\n",
-       "      <th>tags.ISO3166-1</th>\n",
-       "      <th>tags.ISO3166-2</th>\n",
-       "      <th>tags.is_in:country</th>\n",
-       "      <th>tags.ref:nuts</th>\n",
-       "      <th>tags.ref:nuts:2</th>\n",
-       "      <th>tags.ref:nuts:3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>192307</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ελλάς</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       type      id tags.admin_level  tags.parent_id tags.name  tags.name:us  \\\n",
-       "0  relation  192307                2             NaN     Ελλάς           NaN   \n",
-       "\n",
-       "  tags.ISO3166-1  tags.ISO3166-2  tags.is_in:country tags.ref:nuts  \\\n",
-       "0             GR             NaN                 NaN            EL   \n",
-       "\n",
-       "   tags.ref:nuts:2  tags.ref:nuts:3  \n",
-       "0              NaN              NaN  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "greece_res['leak']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "42207f72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tags.ISO3166-2\n",
-       "TR-48    1\n",
-       "GR-A2    1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_by_cntr['Greece']['tags.ISO3166-2'].value_counts()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "670bf21f",
    "metadata": {},
    "source": [
     "## 1. basic elems test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7d182c81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reloadPckg()"
    ]
   },
   {
@@ -820,12 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6010519c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tgm.dump(os.path.join('..', 'data', 'tests results', 'osm_basic_test.pkl'), osm_basic_test)"
+    "# tgm.dump(os.path.join('..', 'data', 'tests results', 'osm_basic_test.pkl'), osm_basic_test)"
    ]
   },
   {
@@ -852,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "141f8047",
    "metadata": {},
    "outputs": [
@@ -862,7 +708,7 @@
        "{'missing.name': ['15544495'], 'leak': ['223136']}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,28 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "2708e39e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'missing.name': [], 'leak': []}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "osm_basic_test['Albania']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "id": "4408e30f",
    "metadata": {},
    "outputs": [
@@ -1030,7 +855,7 @@
        "    <tr>\n",
        "      <th>Greece</th>\n",
        "      <td>[15544495]</td>\n",
-       "      <td>[192307, 223136]</td>\n",
+       "      <td>[223136]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Guinea</th>\n",
