Update normalization of pandas dataframe to use pd.NA and string as dtypes

--- a/notebooks/clean_and_test.ipynb
+++ b/notebooks/clean_and_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "43721fab",
    "metadata": {},
    "outputs": [],
@@ -87,25 +87,15 @@
    "id": "e4cf4e95",
    "metadata": {},
    "source": [
-    "## import"
+    "## * import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "8971491b",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "241"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -127,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bbec24e0",
    "metadata": {},
    "outputs": [
@@ -220,15 +210,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32dd5750",
+   "id": "cc4e27e6",
    "metadata": {},
    "source": [
-    "## use only sovereign countries"
+    "## * convert id to string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
+   "id": "00e0cf1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k,v in rawByCntr.items():\n",
+    "    for ele in v:\n",
+    "        ele['id'] = str(ele['id'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32dd5750",
+   "metadata": {},
+   "source": [
+    "## * use only sovereign countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "913ed46c",
    "metadata": {},
    "outputs": [
@@ -238,7 +248,7 @@
        "214"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "7e11c037",
    "metadata": {},
    "outputs": [
@@ -260,7 +270,7 @@
        "64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,15 +282,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a66c20",
+   "id": "0346675f",
    "metadata": {},
    "source": [
-    "## normalize"
+    "## * add parent_id to level 4 entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
+   "id": "718684b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'str'>         117650\n",
+       "<class 'NoneType'>      1088\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = [ele['tags'].get('parent_id',None) for k,v in df_by_cntr.items() for ele in v]\n",
+    "pd.Series(temp).map(type).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "825da8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k,v in df_by_cntr.items():\n",
+    "    cntr_id = list(filter(lambda ele: ele['tags']['admin_level'] == '2', v))[0]\n",
+    "    cntr_id = cntr_id['id']\n",
+    "    for ele in v:\n",
+    "        if ele['tags']['admin_level'] == '4':\n",
+    "            ele['tags']['parent_id'] = str(cntr_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a66c20",
+   "metadata": {},
+   "source": [
+    "## * normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b2ae9b1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reloadPckg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "a0cc71dc",
    "metadata": {},
    "outputs": [
@@ -290,7 +357,7 @@
        "64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +369,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
+   "id": "b0e0e002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined = pd.concat(df_by_cntr.values(), ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "d6987b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>    597765\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "types_count = (\n",
+    "    combined.stack()          # collapse all columns\n",
+    "    .map(type)                # get Python type of each value\n",
+    "    .value_counts()           # count them\n",
+    ")\n",
+    "print(types_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "ecc1cd6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'pandas._libs.missing.NAType'>    827091\n",
+       "<class 'str'>                            597765\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined.map(type).stack().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "id": "51bd96dd",
    "metadata": {},
    "outputs": [
@@ -384,16 +508,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ece2c42",
+   "metadata": {},
+   "source": [
+    "## * SAVE!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "id": "786ee389",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save data by country\n",
-    "raw_normalized_dir = os.path.join('../data/normalized')\n",
     "for k,df in df_by_cntr.items():\n",
-    "    path = os.path.join(raw_normalized_dir, k, 'rawNormalized.pkl')\n",
+    "    path = os.path.join('../data/normalized', k, f'{k}_normalized.pkl')\n",
     "    tgm.dump(path, df)"
    ]
   },
