--- a/notebooks/fix.ipynb
+++ b/notebooks/fix.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# import\n",
     "dataDir = Path(os.path.join(os.getcwd(), '..', 'data/normalized'))\n",
-    "rawFiles = [f for f in dataDir.rglob('*.pkl')]\n",
+    "rawFiles = [f for f in dataDir.rglob('*/*.pkl')]\n",
     "print(len(rawFiles))\n",
     "\n",
     "df_by_cntr = {\n",
@@ -66,283 +66,6 @@
     "    for file in rawFiles\n",
     "}\n",
     "print(len(df_by_cntr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9d816f58",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>id</th>\n",
-       "      <th>tags.admin_level</th>\n",
-       "      <th>tags.parent_id</th>\n",
-       "      <th>tags.name</th>\n",
-       "      <th>tags.name:us</th>\n",
-       "      <th>tags.ISO3166-1</th>\n",
-       "      <th>tags.ISO3166-2</th>\n",
-       "      <th>tags.is_in:country</th>\n",
-       "      <th>tags.ref:nuts</th>\n",
-       "      <th>tags.ref:nuts:2</th>\n",
-       "      <th>tags.ref:nuts:3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>192307</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ελλάς</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>223136</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Muğla</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TR-48</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TR323</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TR323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>4458374</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Αποκεντρωμένη Διοίκηση Ηπείρου - Δυτικής Μακεδ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>4477553</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Αποκεντρωμένη Διοίκηση Αττικής</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>relation</td>\n",
-       "      <td>4495677</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Αποκεντρωμένη Διοίκηση Θεσσαλίας - Στερεάς Ελλ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>584</th>\n",
-       "      <td>rel</td>\n",
-       "      <td>13829626</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1827294</td>\n",
-       "      <td>Balıbey Mahallesi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>585</th>\n",
-       "      <td>rel</td>\n",
-       "      <td>13829627</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1827294</td>\n",
-       "      <td>Camikebir Mahallesi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>rel</td>\n",
-       "      <td>13829628</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1827294</td>\n",
-       "      <td>Hacırüstem Mahallesi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>587</th>\n",
-       "      <td>rel</td>\n",
-       "      <td>13830796</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1827377</td>\n",
-       "      <td>Ulucami Mahallesi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>588</th>\n",
-       "      <td>rel</td>\n",
-       "      <td>13844300</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1827377</td>\n",
-       "      <td>Toparlar Mahallesi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>589 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         type        id tags.admin_level tags.parent_id  \\\n",
-       "0    relation    192307                2            NaN   \n",
-       "1    relation    223136                4            NaN   \n",
-       "2    relation   4458374                4            NaN   \n",
-       "3    relation   4477553                4            NaN   \n",
-       "4    relation   4495677                4            NaN   \n",
-       "..        ...       ...              ...            ...   \n",
-       "584       rel  13829626                8        1827294   \n",
-       "585       rel  13829627                8        1827294   \n",
-       "586       rel  13829628                8        1827294   \n",
-       "587       rel  13830796                8        1827377   \n",
-       "588       rel  13844300                8        1827377   \n",
-       "\n",
-       "                                             tags.name  tags.name:us  \\\n",
-       "0                                                Ελλάς           NaN   \n",
-       "1                                                Muğla           NaN   \n",
-       "2    Αποκεντρωμένη Διοίκηση Ηπείρου - Δυτικής Μακεδ...           NaN   \n",
-       "3                       Αποκεντρωμένη Διοίκηση Αττικής           NaN   \n",
-       "4    Αποκεντρωμένη Διοίκηση Θεσσαλίας - Στερεάς Ελλ...           NaN   \n",
-       "..                                                 ...           ...   \n",
-       "584                                  Balıbey Mahallesi           NaN   \n",
-       "585                                Camikebir Mahallesi           NaN   \n",
-       "586                               Hacırüstem Mahallesi           NaN   \n",
-       "587                                  Ulucami Mahallesi           NaN   \n",
-       "588                                 Toparlar Mahallesi           NaN   \n",
-       "\n",
-       "    tags.ISO3166-1 tags.ISO3166-2  tags.is_in:country tags.ref:nuts  \\\n",
-       "0               GR            NaN                 NaN            EL   \n",
-       "1              NaN          TR-48                 NaN         TR323   \n",
-       "2              NaN            NaN                 NaN           NaN   \n",
-       "3              NaN            NaN                 NaN           NaN   \n",
-       "4              NaN            NaN                 NaN           NaN   \n",
-       "..             ...            ...                 ...           ...   \n",
-       "584            NaN            NaN                 NaN           NaN   \n",
-       "585            NaN            NaN                 NaN           NaN   \n",
-       "586            NaN            NaN                 NaN           NaN   \n",
-       "587            NaN            NaN                 NaN           NaN   \n",
-       "588            NaN            NaN                 NaN           NaN   \n",
-       "\n",
-       "     tags.ref:nuts:2 tags.ref:nuts:3  \n",
-       "0                NaN             NaN  \n",
-       "1                NaN           TR323  \n",
-       "2                NaN             NaN  \n",
-       "3                NaN             NaN  \n",
-       "4                NaN             NaN  \n",
-       "..               ...             ...  \n",
-       "584              NaN             NaN  \n",
-       "585              NaN             NaN  \n",
-       "586              NaN             NaN  \n",
-       "587              NaN             NaN  \n",
-       "588              NaN             NaN  \n",
-       "\n",
-       "[589 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_by_cntr['Greece']"
    ]
   },
   {
@@ -363,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "04355b6f",
    "metadata": {},
    "outputs": [
@@ -373,7 +96,7 @@
        "64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "0716b0a7",
    "metadata": {},
    "outputs": [
@@ -742,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "13d494f3",
    "metadata": {},
    "outputs": [
@@ -752,7 +475,7 @@
        "166"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "0bcc3780",
    "metadata": {},
    "outputs": [],
@@ -780,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "51383f00",
    "metadata": {},
    "outputs": [
@@ -790,7 +513,7 @@
        "[453, 443]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "9223d2cf",
    "metadata": {},
    "outputs": [],
@@ -824,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "416784d5",
    "metadata": {},
    "outputs": [
@@ -834,7 +557,7 @@
        "158"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "75d0a1f4",
    "metadata": {},
    "outputs": [],
@@ -876,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "f4b4afcb",
    "metadata": {},
    "outputs": [],
