--- a/notebooks/fix.ipynb
+++ b/notebooks/fix.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "id": "7a626c8f",
    "metadata": {},
    "outputs": [
@@ -69,6 +69,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c89e6825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "118738"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = pd.concat(df_by_cntr.values(), ignore_index=True)\n",
+    "len(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3c3e9522",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'pandas._libs.missing.NAType'>    827091\n",
+       "<class 'str'>                            597765\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(temp.values.flatten()).map(type).value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7d112fd1",
    "metadata": {},
@@ -91,24 +136,29 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n",
+      "292\n"
+     ]
     }
    ],
    "source": [
     "osm_basic_test = tgm.load(os.path.join('..', 'data', 'tests results', 'osm_basic_test.pkl'))\n",
-    "len(osm_basic_test)"
+    "print(len(osm_basic_test))\n",
+    "to_delete = []\n",
+    "for k,v in osm_basic_test.items():\n",
+    "    to_delete.extend(v['missing.name'])\n",
+    "    to_delete.extend(v['leak'])\n",
+    "\n",
+    "to_delete = set(to_delete)\n",
+    "print(len(to_delete))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "0716b0a7",
    "metadata": {},
    "outputs": [
@@ -464,33 +514,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "13d494f3",
+   "cell_type": "markdown",
+   "id": "83451433",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "166"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "to_delete = []\n",
-    "for k,v in osm_basic_test.items():\n",
-    "    to_delete.extend(v['missing.name'])\n",
-    "    to_delete.extend(v['leak'])\n",
-    "len(to_delete)"
+    "### * apply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0bcc3780",
    "metadata": {},
    "outputs": [],
@@ -503,23 +536,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "51383f00",
+   "execution_count": 133,
+   "id": "09d1287a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[453, 443]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118738\n",
+      "118559\n"
+     ]
     }
    ],
    "source": [
-    "list(map(len,[df_by_cntr['Bangladesh'],df_by_cntr_fixed['Bangladesh']]))"
+    "combined_df_old = pd.concat(df_by_cntr.values(), ignore_index=True)\n",
+    "print(len(combined_df_old))\n",
+    "combined_df_new = pd.concat(df_by_cntr_fixed.values(), ignore_index=True)\n",
+    "print(len(combined_df_new))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "7c6d0e10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[117634, 117471]\n",
+      "163\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([len(set(combined_df_old['id'].to_list())),len(set(combined_df_new['id'].to_list()))])\n",
+    "print(len(to_delete))"
    ]
   },
   {
@@ -532,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "id": "9223d2cf",
    "metadata": {},
    "outputs": [],
@@ -547,17 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 142,
    "id": "416784d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "158"
+       "143"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,6 +620,8 @@
     "to_delete_dup = []\n",
     "for k,v in osm_dup_test.items():\n",
     "    to_delete_dup.extend(v['duplicate.delete_elems'])\n",
+    "\n",
+    "to_delete_dup = set(to_delete_dup)\n",
     "len(to_delete_dup)"
    ]
   },
@@ -574,12 +630,12 @@
    "id": "37316959",
    "metadata": {},
    "source": [
-    "## * apply"
+    "### * apply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 143,
    "id": "75d0a1f4",
    "metadata": {},
    "outputs": [],
@@ -587,6 +643,78 @@
     "# delete duplicate elements\n",
     "for k,df in df_by_cntr_fixed.items():\n",
     "    df_by_cntr_fixed[k] = df[~df[['id','tags.parent_id']].apply(tuple, axis=1).isin(to_delete_dup)].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "bf0442d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118738\n",
+      "118403\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_df_old = pd.concat(df_by_cntr.values(), ignore_index=True)\n",
+    "print(len(combined_df_old))\n",
+    "combined_df_new = pd.concat(df_by_cntr_fixed.values(), ignore_index=True)\n",
+    "print(len(combined_df_new))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b049af9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[117634, 117459]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "306"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print([len(set(combined_df_old['id'].to_list())), len(set(combined_df_new['id'].to_list()))])\n",
+    "len(to_delete.union(to_delete_dup))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "4c8af078",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117328"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "117634-306"
    ]
   },
   {
